syntax = "proto3";

package belifeline.v1.models;

import "belifeline/v1/models/types.proto";

option go_package = "github.com/halcyon-org/kizuna/gen/belifeline/v1;mainv1";

message ClientData {
  UUID client_id = 1;
  string username = 2;
  ApiKey api_key = 3;
  string created_at = 4;
  string last_used_at = 5;
  string last_updated_at = 6;
}
